# cars-crud-api

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
api/v1/: __init__.py  cars.py
app/controllers/: cars.py  exceptions.py
app/models/: cars.py
app/schemas/: cars.py
core/: config.py  database.py
docs/: postman_collection.json
migrations/: populate.sql
tests/api/cars/: create_test.py  delete_test.py  read_test.py  update_test.py
