[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["Felipe Oliveira <felpd3v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
